--- a/public/books/uznik_azkabana/part2/index.html
+++ b/public/books/uznik_azkabana/part2/index.html
@@ -801,7 +801,7 @@
     <div class="column">
       <p class="text">
         <span class="page-num">СТР 370</span>
-        &mdash; Я здесь с неприятной миссией, знаешь ли... Комиссии по обезвреживанию опасных существ требуется свидетель привиденя в исполнение приговора взбесившемуся гиппогрифу.
+        &mdash; Я здесь с неприятной миссией, знаешь ли... Комиссии по обезвреживанию опасных существ требуется свидетель приведения в исполнение приговора взбесившемуся гиппогрифу.
         <span class="explanation">
           Фадж припёрся на казнь гиппогрифа.
         </span>
@@ -809,7 +809,7 @@
     </div>
     <div class="column column-60">
       <p class="bad">
-        Что за хрень? Министра просят заняться такой ерундой? Да если у них там уже всё куплено и приговор давно подписан, то они бы просто нашли какого-нибудь бомжа, заплатили бы ему пару монет и попросили бы присутствовать в виде свидетеля.
+        Что за хрень? Министра просят заняться такой ерундой? Да если у них там уже всё куплено и приговор давно подписан, то они бы просто нашли какого-нибудь бомжа, заплатили бы ему пару монет и попросили бы присутствовать в качестве свидетеля.
       </p>
     </div>
   </section>
@@ -867,7 +867,7 @@
     </div>
     <div class="column column-60">
       <p class="bad">
-        Нереально великий. Он вновь за всю книгу не сделал нихрена полезного.
+        Нереально великий. Он вновь за всю книгу сделал ровно нихрена полезного.
       </p>
     </div>
   </section>
@@ -1001,7 +1001,7 @@
     </div>
     <div class="column column-60">
       <p class="bad">
-        Стали. Вот так запросто. Это при том, что за целый век легальных анимагов было всего семеро (о чём напрямую говорится в книге). А тут три лоботряса взяли да и стали себе оборотнями. Подумаешь, что тут такого! Если бы это было возможно, то анимагов существовало бы во много раз больше.
+        Стали. Вот так запросто. Это при том, что за целый век легальных анимагов было всего семеро (о чём напрямую говорится в книге). А тут три лоботряса взяли да и стали себе оборотнями. Подумаешь, что тут такого! Если бы это было так просто, то анимагов существовало бы во много раз больше.<br><br>И ещё момент: с чего это его трансформации стали такими уж приятными, если в образе волка он совершенно себя не контролирует и, видимо, ничего не помнит? Иными словами, его сознание полностью отключается. Да, ниже он упоминает, что дескать "под влиянием друзей как-то менялся", но это звучит как какая-то чушь. У человека с расщеплённым сознанием разные личности включаются и выключаются по очереди, причём одна личность ничего не помнит о другой. И никакое "влияние друзей" тут не поможет: это серьёзная болезнь, которую нужно лечить серьёзными методами. Так и с ликантропией, которую лечить по-нормальному не научились вообще. Если бы всё было так просто и было бы достаточно "влияния друзей", то оборотней бы так не боялись. И где это "влияние" было чуть позднее, когда Люпин внезапно превратился, а Сириус пытался привести его в чувство?
       </p>
     </div>
   </section>
@@ -1048,6 +1048,22 @@
       </p>
     </div>
   </section>
+  <section class="row" id="page-425">
+    <div class="column">
+      <p class="text">
+        <span class="page-num">СТР 425</span>
+        Я сразу его [Питера] узнал, ведь я столько раз видел его превращения. В статье было сказано, что паренек учится в Хогвартсе — там же, где и Гарри...
+        <span class="explanation">
+          Сириус увидел в газете фотку с семейством Уизли на отдыхе и каким-то образом разглядел на плече Рона крысу.
+        </span>
+      </p>
+    </div>
+    <div class="column column-60">
+      <p class="bad">
+        Это уже перебор. Какого размера была фотка в этой газете, если Сириус сумел не просто разглядеть крысу на плече Рона, но и заметить характерные особенности и даже подметить отсутствие одного из пальцев?..
+      </p>
+    </div>
+  </section>
   <section class="row" id="page-426">
     <div class="column">
       <p class="text">
@@ -1060,7 +1076,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        Петтигрю мог сбежать куда угодно в любую минуту &mdash; он ведь явно понял, что ему грозит серьёзная опасность. Зачем было вообще оставаться у Рона, особенно после нападений Живоглота? В итоге он-таки сбежал, но всё равно зачем-то остался на территории школы.
+        Петтигрю мог сбежать куда угодно в любую минуту &mdash; он ведь явно понял, что ему грозит серьёзная опасность. Зачем было вообще оставаться у Рона, особенно после нападений Живоглота? В итоге он таки сбежал, но всё равно зачем-то остался на территории школы.
       </p>
     </div>
   </section>
@@ -1320,7 +1336,7 @@
     </div>
     <div class="column column-60">
       <p class="bad">
-        Зашибись план, что и говорить. Блэку, значит, всю жизнь придётся бегать от закона, будучи невиновным? А гений Дамблдор не подумал о том, что: а) Надо было отправлять не двух учеников третьего курса, а кого-нибудь понадёжнее из мракоборцев б) Следует помешать Петтигрю скрыться, когда Люпин начал превращаться в оборотня. Это позволит доказать невиновность Блэка на раз-два. Нет, вместо этого давайте заниматься какой-то ерундой с полётами на гиппогрифах. в) Не помешает этим двум засланцам хотя бы выдать мантию-невидимку, чтобы их не заметили.
+        Зашибись план, что и говорить. Блэку, значит, всю жизнь придётся бегать от закона, будучи невиновным? А гений Дамблдор не подумал о том, что: а) Надо было отправлять не двух учеников третьего курса, а кого-нибудь понадёжнее из мракоборцев; б) Следует помешать Петтигрю скрыться, когда Люпин начал превращаться в оборотня. Это позволит доказать невиновность Блэка на раз-два. Нет, вместо этого давайте заниматься какой-то ерундой с полётами на гиппогрифах; в) Не помешает этим двум засланцам хотя бы выдать мантию-невидимку, чтобы их не заметили.
       </p>
     </div>
   </section>
