--- a/public/404.html
+++ b/public/404.html
@@ -257,7 +257,7 @@
 
 
 
-<script src="https://harrypot.lol/js/bundle.6c9a526a60fd346fbcc33f2cc10b60f3d3732094d3b7c47c97f0be5f04950b12.js" integrity="sha256-bJpSamD9NG&#43;8wz8swQtg89NzIJTTt8R8l/C&#43;XwSVCxI=" defer></script>
+<script src="https://harrypot.lol/js/bundle.e93017733b33381d2ec52bce25b7733f65c826ba50c27f204f3edbd5409ac976.js" integrity="sha256-6TAXczszOB0uxSvOJbdzP2XIJrpQwn8gTz7b1UCayXY=" defer></script>
 
 <script>
   (function(){
