--- a/public/books/kubok_ognya/part1/index.html
+++ b/public/books/kubok_ognya/part1/index.html
@@ -352,7 +352,7 @@
     </div>
     <div class="column column-60">
       <p class="bad">
-        Вы конкретные беспредельщики что ли? Вы вообще часто вот так приходите в чужой дом и расхерачиваете там всю комнату? А по лицу вы за это давно получали? Ну, а если бы к вам кто-то в дом вломился и проделал подобную операцию, что бы вы сказали? Просто нет слов: очень, очень интеллигентная семья.
+        Вы конкретные беспредельщики что ли? Вы вообще часто вот так приходите в чужой дом и расхерачиваете там всю комнату? А по лицу вы за это давно получали? Ну, а если бы к вам кто-то в дом вломился и проделал подобную операцию, что бы вы сказали? Просто нет слов: очень, очень интеллигентная семья. Не говоря о том, что обломками могло кого-нибудь задеть.
       </p>
     </div>
   </section>
@@ -365,7 +365,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        А, ну да. Ты вот так запросто нарушил требования министерства, запрещающие подключать камины маглов к сети пороха. Тебе истории с летающей машиной было мало?
+        А, ну да. Ты вот так запросто нарушил требования министерства, запрещающие подключать камины маглов к сети пороха. Тебе истории с летающей машиной было мало? Да и вообще это звучит не очень безопасно: выходит, что в теории маги могут легко забраться в любой камин.
       </p>
     </div>
   </section>
@@ -586,7 +586,7 @@
     </div>
     <div class="column column-60">
       <p class="comment">
-        Зачем подряжать на такое дело магла?
+        Зачем подряжать на такое дело магла? Естественно, у него будет масса неудобных вопросов.
       </p>
     </div>
   </section>
@@ -602,7 +602,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        У вас этот дядька к концу мероприятия станет овощем и составит компанию Локонсу в психушке. Вместо того, чтобы набирать кучу эрзац-людей в чёрном для стирания памяти, лучше было бы их самих и нанять в качестве привратников.
+        У вас этот дядька к концу мероприятия станет овощем и составит компанию Локонсу в психушке. Вместо того, чтобы набирать кучу эрзац-людей в чёрном для стирания памяти, лучше было бы их самих и нанять в качестве привратников. Зачем всё так усложнять?
       </p>
     </div>
   </section>
@@ -655,7 +655,7 @@
     <div class="column">
       <p class="text">
         <span class="page-num">СТР 78</span>
-        Бразильский друг очень обиделся и прислал ему шляпу с заклятием &mdash; у Билли от нее уши свернулись.
+        Бразильский друг очень обиделся [что Билл не смог приехать в гости] и прислал ему шляпу с заклятием &mdash; у Билли от нее уши свернулись.
         <span class="explanation">
           Товарищ по переписке Билла.
         </span>
@@ -744,6 +744,22 @@
       </p>
     </div>
   </section>
+  <section class="row" id="page-85">
+    <div class="column">
+      <p class="text">
+        <span class="page-num">СТР 85</span>
+        &mdash; Людо, нас ждут болгары, не забывай! &mdash; резко оборвал его [Бэгмена] мистер Крауч. &mdash; Спасибо за чай, Уизерби, &mdash; прибавил он и отдал нетронутый чай Перси.
+        <span class="explanation">
+          Шутка в том, что Крауч типа не помнит фамилии Перси, который ему разве что ботинки не чистит.
+        </span>
+      </p>
+    </div>
+    <div class="column column-60">
+      <p class="meh">
+        Вообще-то это звучит как глупость, либо как хамство. Крауч только что общался с мистером Уизли, обращался к нему по имени, и в целом было похоже, что они знают друг друга довольно давно. Естественно, Краучу известно и о том, что Перси &mdash; сын Артура, поэтому и фамилию его он не знать просто не может.  И, кстати, сразу после этого спича Крауч с Бэгменом трансгрессируют, хотя до этого нам прожужжали все уши об антимагловской защите. Видимо, сильным мира сегодня никакие законы не писаны.
+      </p>
+    </div>
+  </section>
   <h2 id="chapter-8" class="mt-1 chapter-title">Глава 8</h2>
   <section class="row" id="page-88">
     <div class="column">
@@ -754,7 +770,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        Вот этот стадион же они скрыли от маглов, иначе вся округа наблюдала бы полёты на мётлах. Но скрыть лагерь волшебников &mdash; уже никак. Ну, и опять же не говоря о том, что все могли телепортироваться сюда просто перед началом.
+        Вот этот стадион же они скрыли от маглов, иначе вся округа наблюдала бы полёты на мётлах. Но скрыть лагерь волшебников &mdash; уже никак. Ну, и опять же не говоря о том, что все могли телепортироваться сюда просто перед началом (разбившись по секторам, чтобы не было давки).
       </p>
     </div>
   </section>
@@ -764,13 +780,13 @@
         <span class="page-num">СТР 92</span>
         &mdash; Хозяин... хозяин хотеть, чтобы я занять ему место, Гарри Поттер, потому что он очень занят.
         <span class="explanation">
-          Эльф Крауча.
+          Эльфийка Крауча.
         </span>
       </p>
     </div>
     <div class="column column-60">
       <p class="meh">
-        Занять место? Нахера? Тут все места по билетам, вообще-то, и мистер Уизли эти билеты, например, с трудом достал.
+        Занять место? Нахера? Тут все места по билетам, вообще-то, и мистер Уизли эти билеты, например, с трудом достал. Понятно, что место вроде как занято для невидимого сынули Крауча, но объяснение очень странное.
       </p>
     </div>
   </section>
@@ -786,7 +802,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        Выпросить? Если они сюда припёрлись, то наверняка с билетами. Или они типа такие ходят и высматривают, чьё бы место занять?
+        Выпросить? Если они сюда припёрлись, то наверняка с билетами. Или они типа такие ходят и высматривают, чьё бы место занять? Идиотизм же: это какие-то высокопоставленные дядьки, с которыми лично министр в дёсны целуется; ясное дело, что у них и так места хорошие. Больше того, чуть ниже упоминается, что в числе делегации министр магии Болгарии.
       </p>
     </div>
   </section>
@@ -803,6 +819,22 @@
     <div class="column column-60">
       <p class="comment">
         А это вообще законно? Эти девицы людей натурально сводят с ума, а тут, на минуточку, сто тысяч рыл сидит, из которых примерно половина &mdash; мужчины. Чем подобная акция может закончиться &mdash; совершенно неизвестно.
+      </p>
+    </div>
+  </section>
+  <section class="row" id="page-98">
+    <div class="column">
+      <p class="text">
+        <span class="page-num">СТР 98</span>
+        [...]Левски, Волков, Волчанов[...]
+        <span class="explanation">
+          Сборная Болгарии.
+        </span>
+      </p>
+    </div>
+    <div class="column column-60">
+      <p class="comment">
+        Да, а также Волкогонов, Волковой и Волкова. Развесистая болгарская клюква стучится к нам в окно.
       </p>
     </div>
   </section>
@@ -889,7 +921,7 @@
     </div>
     <div class="column column-60">
       <p class="comment">
-        Потому что судей хотя бы двое должно быть, в таком-то скоростном виде спорта.
+        Потому что судей хотя бы двое должно быть, в таком-то скоростном виде спорта. Да и вообще на поле и рядом с ним происходит какое-то побоище: вейлы пытаются поджечь лепреконов, используя довольно опасные заклинания, те им в ответ средние пальцы наколдовывают, болгары всех лупят дубинами направо и налево, Краму нос сломали, зрители совсем с ума сходят. Матч нужно явно остановить по крайней мере минут на 5-10 и устранить с поля "талисманов", дать игрокам успокоиться и потребовать, чтобы Крама осмотрел врач. Между прочим, в некоторых видах спорта на поле не может находиться игрок в крови: это сделано просто для безопасности, так как травма может сначала показаться ерундовой, но затем привести к большим проблемам. 
       </p>
     </div>
   </section>
@@ -932,7 +964,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        А какое такое богатство они, собственно, заработали? Ставка была 30 с чем-то галлеонов, коэффициент был вряд ли больше 10 (Ирландия была явным фаворитом, а Крам &mdash; явно лучшим ловцом). Значит, где-то 300, может быть 400 галлеонов выигрыша? Бинокуляры стоили 10, и Гарри безо всяких проблем прикупил сразу три пары. Волшебная палочка, купленная в первой книге, стоила всего 7 галлеонов. 400 галлеонов, видимо, &mdash; это одна зарплата обычного служащего? Для открытия собственного дела это, скажем прямо, не очень большая сумма. В дальнейшем мы ещё вернёмся к этим выкладкам.
+        А какое такое богатство они, собственно, заработали? Ставка была 30 или 40 с чем-то галлеонов, коэффициент был вряд ли больше 10 (Ирландия была явным фаворитом, а Крам &mdash; явно лучшим ловцом). Значит, где-то 300, может быть 400 галлеонов выигрыша? Бинокуляры стоили 10, и Гарри безо всяких проблем прикупил сразу три пары. Волшебная палочка, купленная в первой книге, стоила тоже около десятка галлеонов. 400 галлеонов, видимо, &mdash; это одна зарплата обычного служащего? Для открытия собственного дела это, скажем прямо, не очень большая сумма. В дальнейшем мы ещё вернёмся к этим выкладкам.
       </p>
     </div>
   </section>
@@ -1276,7 +1308,7 @@
     </div>
     <div class="column column-60">
       <p class="comment">
-        Заходят в бар бесконечное количество математиков. Первый говорит: "Мне литр пива!". Второй: "А мне половину литра пива!". Третий: "А мне половину от половины литра!". Бармен: "Не-не-не, ребята, знаю я ваши приколы, валите отсюда".
+        Заходят в бар бесконечное количество математиков. Первый говорит: "Мне литр пива!". Второй: "А мне половину литра пива!". Третий: "А мне половину от половины литра!". Бармен: "Не-не-не, ребята, знаю я ваши приколы, вот вам литр пива на всех и валите отсюда".
       </p>
     </div>
   </section>
@@ -1440,7 +1472,7 @@
 
 
 
-<script src="https://harrypot.lol/js/bundle.6c9a526a60fd346fbcc33f2cc10b60f3d3732094d3b7c47c97f0be5f04950b12.js" integrity="sha256-bJpSamD9NG&#43;8wz8swQtg89NzIJTTt8R8l/C&#43;XwSVCxI=" defer></script>
+<script src="https://harrypot.lol/js/bundle.e93017733b33381d2ec52bce25b7733f65c826ba50c27f204f3edbd5409ac976.js" integrity="sha256-6TAXczszOB0uxSvOJbdzP2XIJrpQwn8gTz7b1UCayXY=" defer></script>
 
 <script>
   (function(){
