--- a/public/books/kubok_ognya/part1/index.html
+++ b/public/books/kubok_ognya/part1/index.html
@@ -1046,6 +1046,22 @@
     <div class="column">
       <p class="text">
         <span class="page-num">СТР 121</span>
+        &mdash; Окаменей! &mdash; проревели двадцать голосов
+        <span class="explanation">
+          Кто-то наколдовал чёрную метку рядом с Гарри и Ко, и к ним сразу же ломанулась куча волшебников, желающая их вырубить.
+        </span>
+      </p>
+    </div>
+    <div class="column column-60">
+      <p class="meh">
+        Классно. То есть вы совершенно ничего не можете сделать с пожирателями, так как по факту не захватили никого из них, но вот на детишек можете напать безо всяких проблем. Конечно, нужно ведь показать хоть какой-то результат. Вообще, даже эта сцена с нападением пожирателей доказывает, как же всё прогнило в волшебном мире Англии и как ей требуются перемены.
+      </p>
+    </div>
+  </section>
+  <section class="row" id="page-121-2">
+    <div class="column">
+      <p class="text">
+        <span class="page-num">СТР 121</span>
         &mdash; Кто из вас это сделал? &mdash; зарычал он; его колючий взгляд обежал троих друзей. &mdash; Кто из вас наколдовал Черную Метку?
         <span class="explanation">
           Кто-то наколдовал метку, и Крауч сразу же обвиняет в этом детей.
@@ -1054,7 +1070,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        Очередной мудак, который хочет повесить всех собак на школьников. Сколько в министерстве таких мудаков ещё припасено, интересно?
+        Очередной мудак, который хочет повесить всех собак на школьников. Сколько в министерстве таких мудаков ещё припасено, интересно? Он сразу же заявляет, что детишки как-то "подозрительно много знают о том, как наколдовал метку", хотя ему только что прямо заявили, что слышали, как кто-то колдовал в ближайших кустах.
       </p>
     </div>
   </section>
@@ -1074,6 +1090,22 @@
       </p>
     </div>
   </section>
+  <section class="row" id="page-125">
+    <div class="column">
+      <p class="text">
+        <span class="page-num">СТР 125</span>
+        &mdash; Эльф! &mdash; сурово произнес мистер Диггори. &mdash; Ты знаешь, кто я такой? Я член Комиссии по регулированию и контролю за магическими существами!
+        <span class="explanation">
+          Диггори угрожает Винки, которую нашли в кустах с волшебной палочкой.
+        </span>
+      </p>
+    </div>
+    <div class="column column-60">
+      <p class="meh">
+        Да, мы знаем, кто ты такой. Ты дебил, который прыгает от радости, что твой сынуля победил Поттера хоть в чём-нибудь. А теперь ты угрожаешь ничего не понимающему эльфу, показывая себя нереальным альфа-самцом. Только ты не думаешь, что эльфы вряд ли будут добровольно колдовать метку Волдеморта, который их всех ненавидел и грозился уничтожить. Следующим же номером этот идиот пытается обвинить Поттера, так как у Винки оказалась именно его палочка. Откуда, ну откуда в министерстве берутся все эти идиоты?
+      </p>
+    </div>
+  </section>
   <section class="row" id="page-127">
     <div class="column">
       <p class="text">
@@ -1086,7 +1118,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        А это что доказывает? Злодей взял палочку, кинул заклинание, потом вырубил эльфа, сунул палочку ей, а затем скрылся.
+        А это что доказывает? Злодей взял палочку, кинул заклинание, потом вырубил эльфа, сунул палочку ей, а затем скрылся. Почему-то все эти молодчики их министерства очень любят находить самое простое решение проблемы, и с упорством маньяков следовать именно ему, игнорируя любые другие улики.<br><br>А вообще с этой меткой в небе они носятся, как со списанной торбой, хотя ничего особенного в ней нет. Да, когда-то её использовал Волдеморт, но теперь-то её мог наколдовать любой его фанат. Это как нацики, которые рисуют свастику на стенах: да, когда-то её котировал Гитлер, но это не значит, что теперь фюрер восстал и собственноручно накалякал свастику на стене жилого дома.
       </p>
     </div>
   </section>
@@ -1099,7 +1131,7 @@
     </div>
     <div class="column column-60">
       <p class="comment">
-        За что? За то, что убежала от страха? Ну ты и маньяк, ё-моё.
+        За что? За то, что убежала от страха? Ну ты и маньяк, ё-моё. Забавно то, что все на это событие по факту забили. Никакого расследования, никаких арестов. Подумаешь, толпа пожирателей на нас напала, что здесь такого?
       </p>
     </div>
   </section>
@@ -1115,7 +1147,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        Вы не смогли оглушить <strong>ни одного</strong> человека из всей этой толпы? Нда. Гермиона на первом курсе Невилла оглушила так, что он полночи в отключке был.
+        Вы не смогли оглушить <strong>ни одного</strong> человека из всей этой толпы? Нда. Гермиона на первом курсе Невилла оглушила так, что он полночи в отключке был.<br><br>Кстати, здесь же упоминается о том, что на лагерь напала совсем небольшая часть изначальных пожирателей, то есть их было не так-то много. Чего ж тогда все так перепугались и не смогли дать отпор?
       </p>
     </div>
   </section>
@@ -1174,7 +1206,23 @@
     </div>
     <div class="column column-60">
       <p class="good">
-        Так она и в этом права. Вы там занимаетесь имитацией бурной деятельности, а все провинности списываете на каких-нибудь детей, причём уже много лет.
+        Так она и в этом права. Вы там занимаетесь имитацией бурной деятельности, а все провинности списываете на каких-нибудь детей, причём уже много лет. Как вообще службы правопорядка умудрились проморгать <strong>вот такое</strong>, особенно, если учитывать, что тревожные звоночки (в духе Волдеморта в башке Квирелла) были слышны ещё пару лет назад? Это полная, абсолютная некомпетентность, там половину министерства надо разгонять с этими их котлами и прочей ерундой.<br><br>Они про эту Скитер говорят, будто это вселенское зло, а по факту сами косячат так, что диву даёшься.
+      </p>
+    </div>
+  </section>
+  <section class="row" id="page-141">
+    <div class="column">
+      <p class="text">
+        <span class="page-num">СТР 141</span>
+        &mdash; Вот это ты [Гарри] здорово придумал! [...] Уж Сириус-то наверняка знает, что делать!
+        <span class="explanation">
+          У Гарри опять болит шрам, он написал Сириусу, а Рон считает, что это крутая идея.
+        </span>
+      </p>
+    </div>
+    <div class="column column-60">
+      <p class="comment">
+        А что Сириус знает-то? Он специалист по шрамам, которые оставили на память тёмные лорды? Даже Дамблдору далеко не всё ясно, а уж Сириусу &mdash; и подавно. Забавно и другое: никто даже не знает, где находится этот самый Сириус. Причём не только, в каком городе, но и на каком континенте. Как его найдёт сова? А если она может его найти, то, выходит, с помощью совы можно легко устанавливать за людьми слежку. Скажем, привязать к ней какой-нибудь датчик и отслеживать перемещение.
       </p>
     </div>
   </section>
@@ -1308,7 +1356,7 @@
     </div>
     <div class="column column-60">
       <p class="comment">
-        Заходят в бар бесконечное количество математиков. Первый говорит: "Мне литр пива!". Второй: "А мне половину литра пива!". Третий: "А мне половину от половины литра!". Бармен: "Не-не-не, ребята, знаю я ваши приколы, вот вам литр пива на всех и валите отсюда".
+        Заходят в бар бесконечное количество математиков. Первый говорит: "Мне поллитра пива!". Второй: "А мне половину от поллитра пива!". Третий: "А мне половину от половины поллитра!". Бармен: "Не-не-не, ребята, знаю я ваши приколы, вот вам литр пива на всех и валите отсюда".
       </p>
     </div>
   </section>
@@ -1360,7 +1408,7 @@
         <span class="page-num">СТР 180</span>
         Чемпионам позволено такое, о чем остальные и мечтать не смеют. И тысяча галлеонов награды!
         <span class="explanation">
-          Рон жалеет, что не может участвовать в турнире.
+          Фред жалеет, что не может участвовать в турнире.
         </span>
       </p>
     </div>
