--- a/public/books/dary_smerti/part2/index.html
+++ b/public/books/dary_smerti/part2/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Дары смерти — часть 2 &ndash; Гарри и вагон косяков</title>
     <meta name="description" content="Гарри Поттер и Дары смерти: все грехи, косяки и ошибки книги (часть 2)">
     
@@ -16,6 +18,9 @@
     
     <link rel="stylesheet" href="https://harrypot.lol/css/bundle.min.23c1b66660ca645689081e417d89d47fbdcec550f3a36048a5e965acd0a4e12a.css" integrity="sha256-I8G2ZmDKZFaJCB5BfYnUf73OxVDzo2BIpellrNCk4So=" media="all">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+    <noscript>
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500&display=swap" rel="stylesheet">
+    </noscript>
     <meta name="robots" content="all">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -49,7 +54,7 @@
 
 
 <nav class="main-menu js-menu">
-  <a href="#" class="menu-toggler js-menu-toggler" data-target=".parent-menu">
+  <a href="#" class="menu-toggler js-menu-toggler" data-target=".parent-menu" aria-label="Выберите книгу, о грехах которой вы хотите почитать">
     <span></span>
     <span></span>
     <span></span>
@@ -1924,7 +1929,7 @@
         Все права на оригинальный текст принадлежат изначальному правообладателю.
         Цитирование текста книг минимально и производится только в целях комментирования, критики и обсуждения.
         <strong>
-          Любое употребление наркотических средств запрещено законодательством Российской Федерации и наносит вред Вашему здоровью.
+          Любое употребление наркотических средств запрещено законодательством Латвийской Республики (как и многих других стран &mdash; к примеру, Российской Федерации) и наносит вред Вашему здоровью.
         </strong>
         Не забывайте также, что алкоголь, курение и мат &mdash;
         это очень вредно и плохо.
@@ -1940,7 +1945,7 @@
 
 
 
-<script src="https://harrypot.lol/js/bundle.e93017733b33381d2ec52bce25b7733f65c826ba50c27f204f3edbd5409ac976.js" integrity="sha256-6TAXczszOB0uxSvOJbdzP2XIJrpQwn8gTz7b1UCayXY=" defer></script>
+<script src="https://harrypot.lol/js/bundle.f6811148ac9ad6034c0def3e6f517762a0a62b432b098269c76d4af33a1035d3.js" integrity="sha256-9oERSKya1gNMDe8&#43;b1F3YqCmK0MrCYJpx21K8zoQNdM=" defer></script>
 
 <script>
   (function(){
