--- a/public/books/filosofskyi_kamen/part2/index.html
+++ b/public/books/filosofskyi_kamen/part2/index.html
@@ -1404,7 +1404,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        А я думаю, что выгонят безо всяких раздумий, если вы действительно сопрёте камень. И как вообще на экзамене могут поставить оценку выше максимальной? Это равносильно тому, что школьнику ставят не пятёрку, а шестёрку по пятибалльной шкале.
+        А я думаю, что выгонят безо всяких раздумий, если вы действительно сопрёте камень. И как вообще на экзамене могут поставить оценку выше максимальной? Это равносильно тому, что школьнику ставят не пятёрку, а шестёрку по пятибалльной шкале. Или она хотела сказать "обычно не ставят"?
       </p>
     </div>
   </section>
@@ -1736,7 +1736,7 @@
     </div>
     <div class="column column-60">
       <p class="comment">
-        Да, про эти конфеты было сказано уже достаточно. Интересно, а у них есть вкус драконьей спермы?
+        Да, про эти конфеты было сказано уже достаточно. Интересно, а у них есть вкус драконьей спермы? Просто один друг интересовался.
       </p>
     </div>
   </section>
@@ -1833,6 +1833,8 @@
 </article>
 <nav class="pagination">
   <a href="https://harrypot.lol/books/filosofskyi_kamen/part1/">&lt;&lt; Часть 1</a>
+  |
+  <a href="https://harrypot.lol/books/taynaya_komnata/part1/">Следующая книга &gt;&gt;</a>
 </nav>
 
 
