--- a/public/books/orden_feniksa/part3/index.html
+++ b/public/books/orden_feniksa/part3/index.html
@@ -1933,7 +1933,8 @@
   </section>
 </article>
 <nav class="pagination">
-  <a href="https://harrypot.lol/books/orden_feniksa/part2/">&lt;&lt; Часть 2</a>
+  <a href="https://harrypot.lol/books/orden_feniksa/part2/">&lt;&lt; Часть 2</a> |
+  <a href="https://harrypot.lol/books/princ_polukrovka/part1/">Следующая книга &gt;&gt;</a>
 </nav>
 
 
