--- a/public/books/princ_polukrovka/part2/index.html
+++ b/public/books/princ_polukrovka/part2/index.html
@@ -1024,7 +1024,8 @@
   </section>
 </article>
 <nav class="pagination">
-  <a href="https://harrypot.lol/books/princ_polukrovka/part1/">&lt;&lt; Часть 1</a>
+  <a href="https://harrypot.lol/books/princ_polukrovka/part1/">&lt;&lt; Часть 1</a> |
+  <a href="https://harrypot.lol/books/dary_smerti/part1/">Следующая книга &gt;&gt;</a>
 </nav>
 
 
