--- a/public/books/uznik_azkabana/part2/index.html
+++ b/public/books/uznik_azkabana/part2/index.html
@@ -1435,7 +1435,8 @@
   </section>
 </article>
 <nav class="pagination">
-  <a href="https://harrypot.lol/books/uznik_azkabana/part1/">&lt;&lt; Часть 1</a>
+  <a href="https://harrypot.lol/books/uznik_azkabana/part1/">&lt;&lt; Часть 1</a> |
+  <a href="https://harrypot.lol/books/kubok_ognya/part1/">Следующая книга &gt;&gt;</a>
 </nav>
 
 
