--- a/public/books/kubok_ognya/part3/index.html
+++ b/public/books/kubok_ognya/part3/index.html
@@ -1508,7 +1508,8 @@
   </section>
 </article>
 <nav class="pagination">
-  <a href="https://harrypot.lol/books/kubok_ognya/part2/">&lt;&lt; Часть 2</a>
+  <a href="https://harrypot.lol/books/kubok_ognya/part2/">&lt;&lt; Часть 2</a> |
+  <a href="https://harrypot.lol/books/orden_feniksa/part1/">Следующая книга &gt;&gt;</a>
 </nav>
 
 
