--- a/public/books/kubok_ognya/part1/index.html
+++ b/public/books/kubok_ognya/part1/index.html
@@ -1059,7 +1059,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        Классно. То есть вы совершенно ничего не можете сделать с пожирателями, так как по факту не захватили никого из них, но вот на детишек можете напать безо всяких проблем. Конечно, нужно ведь показать хоть какой-то результат. Вообще, даже эта сцена с нападением пожирателей доказывает, как же всё прогнило в волшебном мире Англии и как ей требуются перемены.
+        Классно. То есть вы совершенно ничего не можете сделать с пожирателями, так как по факту не захватили никого из них, но вот на детишек можете напаcть безо всяких проблем. Конечно, нужно ведь показать хоть какой-то результат. Вообще, даже эта сцена с нападением пожирателей доказывает, как же всё прогнило в волшебном мире Англии и как ей требуются перемены.
       </p>
     </div>
   </section>
@@ -1075,7 +1075,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        Очередной мудак, который хочет повесить всех собак на школьников. Сколько в министерстве таких мудаков ещё припасено, интересно? Он сразу же заявляет, что детишки как-то "подозрительно много знают о том, как наколдовал метку", хотя ему только что прямо заявили, что слышали, как кто-то колдовал в ближайших кустах.
+        Очередной мудак, который хочет повесить всех собак на школьников. Сколько в министерстве таких мудаков ещё припасено, интересно? Он сразу же заявляет, что детишки как-то "подозрительно много знают о том, кто наколдовал метку", хотя ему только что прямо заявили, что слышали, как кто-то колдовал в ближайших кустах.
       </p>
     </div>
   </section>
@@ -1107,7 +1107,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        Да, мы знаем, кто ты такой. Ты дебил, который прыгает от радости, что твой сынуля победил Поттера хоть в чём-нибудь. А теперь ты угрожаешь ничего не понимающему эльфу, показывая себя нереальным альфа-самцом. Только ты не думаешь, что эльфы вряд ли будут добровольно колдовать метку Волдеморта, который их всех ненавидел и грозился уничтожить. Следующим же номером этот идиот пытается обвинить Поттера, так как у Винки оказалась именно его палочка. Откуда, ну откуда в министерстве берутся все эти идиоты?
+        Да, мы знаем, кто ты такой. Ты дебил, который прыгает от радости, что твой сынуля победил Поттера хоть в чём-нибудь. А теперь ты угрожаешь ничего не понимающему эльфу, показывая себя нереальным альфа-самцом. Только ты не думаешь, что эльфы вряд ли будут добровольно колдовать метку Волдеморта, который их всех ненавидел и грозился уничтожить. Следующим же номером этот идиот пытается обвинить Поттера, так как у Винки оказалась именно его палочка. Откуда, ну откуда в министерстве берутся все эти кретины?
       </p>
     </div>
   </section>
@@ -1123,7 +1123,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        А это что доказывает? Злодей взял палочку, кинул заклинание, потом вырубил эльфа, сунул палочку ей, а затем скрылся. Почему-то все эти молодчики их министерства очень любят находить самое простое решение проблемы, и с упорством маньяков следовать именно ему, игнорируя любые другие улики.<br><br>А вообще с этой меткой в небе они носятся, как со списанной торбой, хотя ничего особенного в ней нет. Да, когда-то её использовал Волдеморт, но теперь-то её мог наколдовать любой его фанат. Это как нацики, которые рисуют свастику на стенах: да, когда-то её котировал Гитлер, но это не значит, что теперь фюрер восстал и собственноручно накалякал свастику на стене жилого дома.
+        А это что доказывает? Злодей взял палочку, кинул заклинание, потом вырубил эльфа, сунул палочку ей, а затем скрылся. Почему-то все эти молодчики их министерства очень любят находить самое простое решение проблемы, и с упорством маньяков следовать именно ему, игнорируя любые другие улики.<br><br>А вообще с этой меткой в небе они носятся, как с писаной торбой, хотя ничего особенного в ней нет. Да, когда-то её использовал Волдеморт, но теперь-то её мог наколдовать любой его фанат. Это как нацики, которые рисуют свастику на стенах: да, когда-то её котировал Гитлер, но это не значит, что теперь фюрер восстал и собственноручно накалякал свастику на стене жилого дома.
       </p>
     </div>
   </section>
@@ -1211,7 +1211,7 @@
     </div>
     <div class="column column-60">
       <p class="good">
-        Так она и в этом права. Вы там занимаетесь имитацией бурной деятельности, а все провинности списываете на каких-нибудь детей, причём уже много лет. Как вообще службы правопорядка умудрились проморгать <strong>вот такое</strong>, особенно, если учитывать, что тревожные звоночки (в духе Волдеморта в башке Квирелла) были слышны ещё пару лет назад? Это полная, абсолютная некомпетентность, там половину министерства надо разгонять с этими их котлами и прочей ерундой.<br><br>Они про эту Скитер говорят, будто это вселенское зло, а по факту сами косячат так, что диву даёшься.
+        Так она и в этом права. Вы там занимаетесь имитацией бурной деятельности, а все провинности списываете на каких-нибудь детей, причём уже много лет. Как вообще службы правопорядка умудрились проморгать <strong>вот такое</strong>, особенно, если учитывать, что тревожные звоночки (в духе Волдеморта в башке Квирелла) были слышны ещё пару лет назад? Это полная, абсолютная некомпетентность, там половину министерства надо разгонять с этими их котлами и прочей ерундой.<br><br>Они про эту Скитер говорят, будто она вселенское зло, а по факту сами косячат так, что диву даёшься.
       </p>
     </div>
   </section>
